src/components/ContactForm/ContactForm.css
/* Container for the form and background */
.contact-form-container {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh; /* Full viewport height */
  /* overflow: hidden; */
  padding-top: 10px;
  margin-top: 20px;
}

/* Background image */
.background-image {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 1000px; /* Adjust the size as needed */
  height: 1000px; /* Adjust the size as needed */
  transform: translate(-50%, -50%);
  opacity: 0.1;
  animation: rotate 20s linear infinite; /* Rotate animation */
  z-index: 0; /* Ensure it stays behind the form */
  pointer-events: none; /* Prevent the image from interfering with user interactions */
}

/* Rotate animation */
@keyframes rotate {
  from {
    transform: translate(-50%, -50%) rotate(0deg);
  }
  to {
    transform: translate(-50%, -50%) rotate(360deg);
  }
}

/* Title container */
.title-container {
  z-index: 1; /* Ensure it stays above the background */
  text-align: center;
  color: #453393; /* Adjust color as needed */
  font-size: 2rem;
  margin-bottom: 20px;
}

/* Form styles */
.contact-form {
  position: relative;
  z-index: 1; /* Ensure it stays above the background */
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 500px;
  margin: auto;
  padding: 20px;
  border: 1px solid #ccc;
  border-radius: 5px;
  background-color: #f9f9f9;
}

.form-group {
  margin-bottom: 15px;
}

.form-group label {
  display: block;
  margin-bottom: 5px;
}

.form-group input,
.form-group textarea {
  width: 100%;
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 5px;
}

.form-group textarea {
  resize: none;
}

button[type="submit"] {
  padding: 10px 15px;
  border: none;
  border-radius: 5px;
  background-color: rgb(69, 51, 147);
  color: white;
  cursor: pointer;
}

button[type="submit"]:hover {
  background-color: rgb(115, 202, 179);
}

